test/error/StForeachInt.ci
public static class Test
{
	public static bool Run()
	{
		int n = 5;
		foreach (int i in n) { //ERROR: Expected a collection
		}
		return true;
	}
}
